fluxcd/apps/base/rimgo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rimgo
  labels:
    routed-gateway: "true"
