fluxcd/apps/base/rimgo/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rimgo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rimgo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-anubis
    ports:
    - port: 3000
      protocol: TCP
